[package]
name = "tch_distr"
version = "0.1.0"
authors = ["bold <bold@cryptoguru.com>"]
edition = "2018"

description = "Rust equivalent torch.distributions."
repository = "https://github.com/spebern/tch-distr-rs"
keywords = ["pytorch", "deep-learning", "machine-learning", "distribution"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
tch = "0.5.0"

[dev-dependencies]
numpy = "0.14.1"
ndarray = "0.15.3"
pyo3 = "0.14.1"
serial_test = "0.5.1"
